# annofab-coco-tools

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: lint-test.yaml
docs/: design.md
resources/: LICENSE-COCO.txt  af_input_data.json  af_task.json  coco_instances.json
src/: convert_af_annotation_to_coco_instances.py  convert_coco_instances_annotation_to_af.py  create_af_input_data.py  create_af_task.py
src/common/: cli.py  utils.py
tests/: test_convert_af_annotation_to_coco_instances.py  test_convert_coco_instances_annotation_to_af.py
tests/resources/: test_coco_instances.json
